--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="https://yoshitika.github.io/littlebits/assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="https://akiyamalab1.github.io/littlebits/assets/css/style.css">
     <title>littleBits解説資料</title>
   </head>
   <body>
